# adm_simcc

./: .env  .env.exemple  .gitignore  Dockerfile  JSON.json  app.py  dgp.csv  docker-compose.yml  env.py  import_data.py  import_graduate_program.py  json.json  main  main.cpp  migrate_cimatec_adm.py  migrate_db_adm.py  migrate_simcc_adm.py  p.py  pyproject.toml  python.py  readme.md  requirements.txt  student.json  tralha.py
Dao/: GraduateProgramResearcherSQL.py  GraduateProgramSQL.py  InstitutionSQL.py  ResearchGroupSQL.py  ResearcherSQL.py  StudentSQL.py  dbHandler.py  indProdSQL.py
Files/: graduate_program.csv  graduate_program_researcher_ufsb.xlsx  ~$graduate_program_researcher_ufsb.xlsx
Model/: GraduateProgramResearcher.py  Institution.py  ResearchGroup.py  weights.py
Rest/: graduateProgramResearcherRest.py  graduateProgramRest.py  ind_prod.py  institutionRest.py  researchGroupRest.py  researcherRest.py  studentRest.py
Scripts/: db_add_research_group.sql  db_create.sql  db_teste.sql  migration_simcc.py  simcc_to_adm.py
adm_simcc/: __init__.py
docs/: my-doc.py
files/: asd.csv.csv  asd.csv.csv:Zone.Identifier  directory.json
research_group_files/: rel_consulta_grupo_pesquisa.xls
scripts/: create_db.sql  data_base.sql  database.sql  import_old_data.py  maintenance.py  setup_database_adm.py
tests/: conftest.py  test_dao.py  test_graduate_program.py  test_graduate_program_researcher.py  test_home_page.py  test_institution.py  test_institution_endpoints.py  test_research_group.py  test_researcher.py  test_teachers.py  test_technician.py
(+76 files in other folders)
