[tool.poetry]
name = "adm-simcc"
version = "0.1.0"
description = ""
authors = ["meirelescg <geu_costa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"
flask = "^3.0.3"
flask-cors = "^4.0.0"
pandas = "^2.2.2"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
httpie = "^3.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.3"
httpx = "^0.27.0"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'gunicorn app:app --reload'
test = 'pytest -s -x --cov=adm_simcc -vv'
post_test = 'coverage html'